# Finance2_Final_Project

./: .RData  .gitignore  README.md  anaysis_10k.ipynb  df_final.csv  df_grouped_10k.csv  items.txt  part_of_speech_tagging.ipynb  pyproject.toml  testing.ipynb
Analysis Notebooks/: anaysis.ipynb  regression_python.ipynb
Final Regressions/: .Rhistory  regression_R.R
data/: output.txt  output2.txt
data/8k_2015/001/: AAL_0000004515_8K_20140103_8-K_excerpt.txt  AAL_0000004515_8K_20140103_8-K_metadata.json  AAL_0000004515_8K_20150112_8-K_excerpt.txt  AAL_0000004515_8K_20150112_8-K_metadata.json  AAL_0000004515_8K_20150127_8-K_excerpt.txt  AAL_0000004515_8K_20150127_8-K_metadata.json  AAL_0000004515_8K_20150130_8-K_excerpt.txt  AAL_0000004515_8K_20150130_8-K_metadata.json  AAL_0000004515_8K_20150209_8-K_excerpt.txt  AAL_0000004515_8K_20150209_8-K_metadata.json  AAL_0000004515_8K_20150226_8-K_excerpt.txt  AAL_0000004515_8K_20150226_8-K_metadata.json  AAL_0000004515_EX991_20150112_EX-99_excerpt.txt  AAL_0000004515_EX991_20150112_EX-99_metadata.json  AAL_0000004515_EX991_20150127_EX-99_excerpt.txt  AAL_0000004515_EX991_20150127_EX-99_metadata.json  AAL_0000004515_EX991_20150130_EX-99_excerpt.txt  AAL_0000004515_EX991_20150130_EX-99_metadata.json  AAL_0000004515_EX991_20150209_EX-99_excerpt.txt  AAL_0000004515_EX991_20150209_EX-99_metadata.json  (+986 more)
data/dear_ceo/: dear_ceo_2012.txt  dear_ceo_2014.txt  dear_ceo_2015.txt  dear_ceo_2016.txt  dear_ceo_2017.txt  dear_ceo_2018.txt  dear_ceo_2019.txt  dear_ceo_2020.txt  dear_ceo_2021.txt  dear_ceo_2022.txt
(+43200 files in other folders)
